# Minesweeper

./: CMakeLists.txt  LoginScreen.cpp  LoginScreen.h  README.md  SignUpScreen.cpp  SignUpScreen.h  SplashScreen.cpp  SplashScreen.h  home_screen.cpp  home_screen.h  leaderboard.cpp  leaderboard.h  main.c  main.cpp  run.ps1  run.sh  sweep.cpp  sweep.h
Backend/: CMakeLists.txt  main.cpp
Backend_Integration/: leader_board.cpp  leader_board.h  login_class.cpp  login_class.h  score_class.cpp  score_class.h  signup_class.cpp  signup_class.h  user_profile.cpp  user_profile.h
